update some bounds and positions

--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 			<p class="enterprise-data"><a href="">Sitemap</a></p>
 		</article>
 		<article>
-			<h3 class="enterprise-data">Newaletter</h3>
+			<h3>Newaletter</h3>
 			<p class="enterprise-data">Subscribe to ou newsletter and get all the cool news</p>
 			<input type="email" placeholder="Enter Email" class="enterprise-email-input">
 		</article>
 	</section><!-- .enterprise-info -->
-	<hr>
+	<hr class="hr-footer">
 	<footer id="main-footer">
 		<p>All rigths reserved 2015 &copy</p>
 	</footer>
